Wed Mar 4 14:24:58 GMT Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c - add Navigation next/previous chequer play, linked
	  to alt page down/up

Wed Mar 4 11:26:54 Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c, backgammon.h, set.c, gnubg.c - save the options
	  for players-are-same, cube-equal-chequer and
	  truncation-equal-player0 in rollout settings.

Tue Mar 3  15:28:15 Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c - fix EvalWidget to display the actual reduction
	  values. Someone needs to have a second look at the whole
	  approach of the menus with one item skipped, this is a hack
	  on not the nicest of code

Mon Mar  3 20:14:05 2003  Joern Thyssen  <jth@gnubg.org>

	Rename fNackgammon into a enum bgvariation
	(preparing for interesting bg variations :-))

	* gnubg.c (InitBoard): handle bg variations
	* gnubg.c (SaveSettings): save new enum. 
	* gnubg.c, show.c, set.c: new commands "set variation xxx" and
	"show variation".

Mon Mar  3 20:06:22 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c: update some colors and CSS styles.

Mon Mar 3 18:54:15 GMT Jim Segrave <jes@jes-2.demon.nl>

	* renderprefs.c, gnubg.c - conditionals to allow a build
	  after configure --without-gtk --without-gtk2 --without-x

Sun Mar  2 16:31:31 2003  Joern Thyssen  <jth@gnubg.org>

	New function: TextToClipboard. Copies a given string to
	the clipboard (works for both wintendo and *nix).

	* gnubg.c (TextToClipboard): new function.
	* gtkgame.c (GTKTextToClipboard): new function.
	* gtkgame.c (InitGTK): add pwMain as target for primary selections.
	* html.c (CommandExportPositionGammOnLine): put html on clipboard.

Sun Mar  2 16:02:51 2003  Joern Thyssen  <jth@gnubg.org>

	Rename .gnubgpr to .gnubg/gnubgpr

	* gnubg.c (Movegnubgpr): new function.
	* record.c: new name for player's records file

Sun Mar  2 15:51:00 2003  Joern Thyssen  <jth@gnubg.org>

	* boards.xml: add new board by JP White.

Sun Mar  2 15:28:50 2003  Joern Thyssen  <jth@gnubg.org>
