@@ -1,3 +1,8 @@
+Sat Mar  8 08:31:48 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* text.c, html.c: Fix problem with wrong alerts in export of positions.
+	(reported by several people)
+
 Wed Mar 4 14:24:58 GMT Jim Segrave <jes@jes-2.demon.nl>
 
 	* gtkgame.c - add Navigation next/previous chequer play, linked
